--- a/BertScout2020XmlData/BertScout2020XmlData.csproj
+++ b/BertScout2020XmlData/BertScout2020XmlData.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BertScout2020XmlData</RootNamespace>
     <AssemblyName>BertScout2020XmlData</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -69,4 +69,7 @@
     <EmbeddedResource Include="EmbeddedResources\Teams.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>IF "$(ConfigurationName)"=="Release" XCOPY /D /Y "$(TargetPath)" "$(ProjectDir)..\EXE"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
