--- a/BertScout2020/BertScout2020/BertScout2020.csproj
+++ b/BertScout2020/BertScout2020/BertScout2020.csproj
@@ -59,10 +59,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />  
+    <PackageReference Include="Xamarin.Forms" Version="4.3.0.947036" />  
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="BertScout2020Data">
+      <HintPath>..\..\EXE\BertScout2020Data.dll</HintPath>
+    </Reference>
+    <Reference Include="BertScout2020XmlData">
+      <HintPath>..\..\EXE\BertScout2020XmlData.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.JSON">
+      <HintPath>..\..\EXE\Common.JSON.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
@@ -105,10 +117,5 @@
     <EmbeddedResource Update="Views\TeamDetailsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\BertScout2020Data\BertScout2020Data.csproj" />
-    <ProjectReference Include="..\..\BertScout2020XmlData\BertScout2020XmlData.csproj" />
   </ItemGroup>
 </Project>
