--- a/BertScout2020/BertScout2020/BertScout2020.csproj
+++ b/BertScout2020/BertScout2020/BertScout2020.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyVersion>2019.10.30.2248</AssemblyVersion>
+    <FileVersion>2019.10.30.2248</FileVersion>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
+    <RunAnalyzersDuringLiveAnalysis>false</RunAnalyzersDuringLiveAnalysis>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
